<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrashFriends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="trash_firends_list">Trash Friends List:</string>
    <string name="CheckBoxGadi">Gadi</string>
    <string name="CheckBoxElad">Elad</string>
    <string name="CheckBoxYogi">Yogi</string>
    <string name="CheckBoxOhad">Ohad</string>
    <string name="Send">Send</string>
    <string name="title_activity_send_message">SendMessageActivity</string>
    <string name="action_test">Test</string>
    <string name="action_search">Search</string>

</resources>
